# ohdsi-webapi-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  MCP_CLIENT_SETUP.md  Makefile  README.md  claude-config.json  docker-compose.yml  docker.sh  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
docs/: configuration-env-vars.md  development.md  docker.md  http-setup.md  production.md  source_key.md  source_key_clarification.md  stdio-setup.md  test-with-claude-desktop.md
scripts/: debug_search.py  test_client_session.py  test_concept_search.py  test_enhanced_search.py  test_mcp_client.py  test_mcp_jsonrpc.py  test_runner.py  test_webapi_direct.py
src/ohdsi_webapi_mcp/: __init__.py  http_server.py  server.py
src/ohdsi_webapi_mcp/routes/: __init__.py  cohorts.py  concept_sets.py  info.py  jobs.py  persistence.py  sources.py  vocabulary.py
src/ohdsi_webapi_mcp/tools/: __init__.py  cohorts.py  concept_sets.py  concepts.py  info.py  jobs.py  persistence.py  sources.py  vocabulary.py
tests/: conftest.py  test_mcp_protocol.py.backup
tests/integration/: README.md  TEST_FIXES_SUMMARY.md  test_http_api.py  test_http_cohorts.py  test_http_concept_sets.py  test_http_info.py  test_http_jobs.py  test_http_persistence.py  test_http_sources.py  test_http_vocabulary.py  test_integration.py
tests/unit/: test_concepts.py  test_server.py
